--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
-head{
+header{
 font-size:30px;
+width: 1200px;
+margin: auto;
 }
 .art img{
 width: 500px;
+height: 400px;
 float: left;
-padding: 0 10px 0 10px;
+padding: 0 20px 0 20px;
 margin-top:50px;
 }
