--- a/style.css
+++ b/style.css
@@ -1,21 +1,31 @@
 header{
-    font-size:30px;
+    font-size:20px;
     width: 1200px;
+    height: 200px;
     margin: auto;
+    background-color:#888888;
 }
-header h1{
+body{
+    background-color: floralwhite
+}
+h1{
     float: left;
     margin-right: 500px;
+    margin: 80px 0 0 30px;
 }
-title a{
+.title a{
     text-decoration: none;
 }
 .menu li{
     list-style: none;
-    float: left;
+    float: right;
     font-size: 18px;
     margin-top: 90px;
+    padding-right: 35px;
     padding: 0 10px 0 10px;
+}
+.menu a{
+    text-decoration: none;
 }
 
 .art img{
@@ -28,14 +38,12 @@ title a{
 .container{
     width: 1200px;
     margin: auto;
-}
-.container p{
-    width: 1200px;
     float: left;
 }
 .art{
     width: 1200px;
     margin: auto;
+    float: left;
 }
 .self-portrait{
     width: 350px;
@@ -45,6 +53,22 @@ title a{
 .container p{
     float: left;
     width: 1200px;
-    margin: auto;
+    margin-left: 200px;
     margin-top:50px;
+    clear: both;
+    font-size: 1.5em;
+}
+.container{
+    width: 1200px;
+    margin: auto;
+    float: left;
+}
+.figure img{
+    width: 500px;
+    border: solid 15px #887788;
+    margin: 200px;
+}
+.figure figcaption{
+    clear: both;
+    text-align: center;
 }
