--- a/style.css
+++ b/style.css
@@ -2,11 +2,13 @@ header{
     font-size:20px;
     width: 1200px;
     height: 200px;
+    margin-bottom: 100px;
     margin: auto;
-    background-color:#888888;
+    background-color:#fe9f8c;
 }
 body{
-    background-color: floralwhite
+    background-color: 7d9e3c;
+    margin: 0;
 }
 h1{
     float: left;
@@ -15,6 +17,10 @@ h1{
 }
 .title a{
     text-decoration: none;
+    color: #ffffff;
+}
+a:hover{
+    color: blanchedalmond;
 }
 .menu li{
     list-style: none;
@@ -26,49 +32,41 @@ h1{
 }
 .menu a{
     text-decoration: none;
+    color: #ffffff;
 }
-
-.art img{
-    width: 500px;
-    height: 400px;
-    float: left;
-    padding: 20px 20px 20px 20px;
-    margin-top:50px;
+.menu a:hover{
+    color: blanchedalmond;
 }
 .container{
-    width: 1200px;
-    margin: auto;
-    float: left;
-}
-.art{
-    width: 1200px;
-    margin: auto;
-    float: left;
+	background-color: #ffffff;
+	width: 1200px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 15px;
 }
 .self-portrait{
     width: 350px;
     float: left;
     margin-left: 200px;
 }
-.container p{
-    float: left;
-    width: 1200px;
-    margin-left: 200px;
-    margin-top:50px;
-    clear: both;
-    font-size: 1.5em;
-}
-.container{
-    width: 1200px;
-    margin: auto;
-    float: left;
-}
-.figure img{
+.container img{
     width: 500px;
     border: solid 15px #887788;
-    margin: 200px;
-}
-.figure figcaption{
+    margin: 0;
     clear: both;
-    text-align: center;
+
+}
+.container figcaption{
+    clear: both;
+    font-size: 24px;
+    border-bottom: solid 5px #c39f4a;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+p{
+    width: 500px;
+    line-height: 1.5;
+    clear: both;
+    float: right;
+    margin: 15px 100px 0 0;
 }
