--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 header{
     font-size:20px;
     height: 120px;
-    margin: auto;
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
     background-color: #fe9f8c;
     box-shadow: 0 1px 7px #aaaaaa;
     margin-bottom: 60px;
@@ -11,8 +13,11 @@ body{
     margin: 0;
 }
 h1{
-    float: left;
-    margin: 40px 0 0 200px;
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    padding-top: 15px;
 }
 .title a{
     text-decoration: none;
@@ -22,15 +27,18 @@ a:hover{
     color: blanchedalmond;
 }
 .menu ul{
-    margin-right: 200px;
+    list-style-type: none;
+    margin-top: -20px;
+    margin-bottom: 0;
+    padding-left: 0;
+    font-size: 0px;
 }
 .menu li{
-    list-style: none;
-    float: right;
+    display: inline;
     font-size: 18px;
-    margin-top: 70px;
-    padding-right: 35px;
-    padding: 0 10px 0 10px;
+    border-right: solid 1px #aaaaaa;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 .menu a{
     text-decoration: none;
@@ -39,13 +47,22 @@ a:hover{
 .menu a:hover{
     color: blanchedalmond;
 }
+.menu{
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: right;　
+    margin-top: -17px;
+    margin-bottom: 10px;
+}
 .container{
 	background-color: #ffffff;
 	width: 1200px;
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 15px;
-    padding: 10px 15px 5px 15px;
+    margin-top: 20px;
+    padding: 10px 15px 10px 15px;
 }
 .container img{
     width: 500px;
@@ -60,6 +77,10 @@ a:hover{
     margin-top: 30px;
     margin-bottom: 30px;
 }
+.container a{
+    text-decoration: none;
+    color: darkorchid;
+}
 p{
     width: 1200px;
     margin: auto;
@@ -71,4 +92,7 @@ p{
     clear: both;
     float: right;
     margin: 15px 100px 0 0;
+}
+footer{
+    text-align: center;
 }
